--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,16 +7,45 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <h3>Projeto com Bootstrap e Ionic!</h3>
-    <hr>
-    <p>Componentes Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components"> - UI Components</a></p>
-    <p>Componentes Bootstrap <a target="_blank" rel="noopener noreferrer" href="https://getbootstrap.com/docs/5.3/components/buttons/"> - UI Components</a></p>
-  </div>
+  <!-- Formulário Criar Conta -->
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="12" size-lg="6" class="ion-text-center">
+      <form #criarContaForm="ngForm" (ngSubmit)="criarConta(criarContaForm.value)"> <!-- variavel de template tipo um let -->
+          <ion-item lines="none">
+            <ion-label>Criar Conta</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Usuário" name="email" ngModel type="text"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Senha" name="password" ngModel type="password"></ion-input>
+          </ion-item>
+          <ion-item lines="nome">
+            <ion-button color="light" slot="end" type="submit">Cadastrar</ion-button>
+          </ion-item>
+      </form>
+    </ion-col>
+  </ion-row>
+
+  <!-- Formulário de Login -->
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="12" size-lg="6" class="ion-text-center">
+      <form #loginForm="ngForm" (ngSubmit)="realizarLogin(loginForm.value)"> <!-- variavel de template tipo um let -->
+          <ion-item lines="none">
+            <ion-label>Criar Conta</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Usuário" name="email" ngModel type="text"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input label="Senha" name="password" ngModel type="password"></ion-input>
+          </ion-item>
+          <ion-item lines="nome">
+            <ion-button color="light" slot="end" type="submit">Login</ion-button>
+          </ion-item>
+      </form>
+    </ion-col>
+  </ion-row>
+
 </ion-content>
