--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,71 +8,102 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-row>
-    <ion-col>
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="9">
         <form #searchForm="ngForm" (ngSubmit)="pesquisar(searchForm.value)">
           <ion-item>
             <ion-input label="Pesquisar" name="search" ngModel type="text"></ion-input>
+            <ion-checkbox justify="start">Nome</ion-checkbox>
+            <ion-checkbox justify="start">Cargo</ion-checkbox>
+            <ion-checkbox justify="start">Cidade</ion-checkbox>
+            <ion-checkbox justify="start">Telefone</ion-checkbox>
             <ion-button type="submit">Pesquisar</ion-button>
           </ion-item>
         </form>
     </ion-col>
   </ion-row>
 
-  <ion-row>
-    <ion-col>
+  <ion-row class="ion-justify-content-center">
+    <ion-col size="9">
       <ion-list>
         <ng-container *ngFor="let funcionario of this.funcionarios">
           <ion-item>
             <ion-label>Nome: {{ funcionario.Nome }} - Cargo: {{ funcionario.Cargo }} - Cidade: {{ funcionario.Cidade }} - Telefone: {{ funcionario.Fone }}</ion-label>
-            <ion-icon name="create-outline" (click)="selecionar(funcionario.CodFun)"></ion-icon>
-            <ion-icon name="trash-outline" (click)="remover(funcionario.CodFun)"></ion-icon>
+            <ion-button color="warning" (click)="selecionar(funcionario.CodFun); setOpen(true)">
+              <ion-icon name="create-outline"></ion-icon>
+            </ion-button>
+            <ion-button color="danger" (click)="remover(funcionario.CodFun)">
+              <ion-icon name="trash-outline"></ion-icon>
+            </ion-button>
           </ion-item>
         </ng-container>
       </ion-list>
-    </ion-col>
-  </ion-row>
 
-  <ion-row>
-    <ion-col>
-      <form #insertFuncionario="ngForm" (ngSubmit)="inserir(insertFuncionario.value)"> <!-- variavel de template tipo um let -->
-        <ion-item lines="none">
-          <ion-label>Inserir Funcionario</ion-label>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Nome" name="nome" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Sobrenome" name="sobrenome" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Cargo" name="cargo" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Data de Nascimento" name="data_nasc" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Endereco" name="endereco" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Cidade" name="cidade" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Cep" name="cep" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Pais" name="pais" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Fone" name="fone" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input label="Salario" name="salario" ngModel type="text"></ion-input>
-        </ion-item>
-        <ion-item lines="nome">
-          <ion-button color="light" slot="end" type="submit">Inserir</ion-button>
-        </ion-item>
-      </form>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-button size="medium" color="success" (click)=setOpen(true)>Inserir</ion-button>
+            
+            <!-- INSERIR MODAL -->
+            <ion-modal [isOpen]="isModalOpen">
+              <ng-template>
+                <ion-header>
+                  <ion-toolbar>
+                    <ion-buttons slot="start">
+                      <ion-button (click)="setOpen(false)">Cancel</ion-button>
+                    </ion-buttons>
+                    <ion-title>Inserir Funcionario</ion-title>
+                    <ion-buttons slot="end">
+                      <ion-button type="submit" (click)="funcionario.id != '' ? atualizar(formFuncionario.value) : inserir(formFuncionario.value); setOpen(false);" [strong]="true">Confirm</ion-button>
+                    </ion-buttons>
+                  </ion-toolbar>
+                </ion-header>
+                <ion-content class="ion-padding">
+                  <form #formFuncionario="ngForm"> <!-- variavel de template tipo um let -->
+                    <ion-item lines="none">
+                      <ion-label>{{ funcionario.id ? 'Editar' : 'Inserir'}} Funcionario</ion-label>
+                    </ion-item>
+                    <ion-item *ngIf="funcionario.id">
+                      <ion-input label="id" name="id" [(ngModel)]="funcionario.id" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Nome" name="nome" [(ngModel)]="funcionario.nome" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Sobrenome" name="sobrenome" [(ngModel)]="funcionario.sobrenome" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Cargo" name="cargo" [(ngModel)]="funcionario.cargo" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Data de Nascimento" name="data_nasc" [(ngModel)]="funcionario.data_nasc" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Endereco" name="endereco" [(ngModel)]="funcionario.endereco" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Cidade" name="cidade" [(ngModel)]="funcionario.cidade" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Cep" name="cep" [(ngModel)]="funcionario.cep" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Pais" name="pais" [(ngModel)]="funcionario.pais" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Fone" name="fone" [(ngModel)]="funcionario.fone" type="text"></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input label="Salario" name="salario" [(ngModel)]="funcionario.salario" type="text"></ion-input>
+                    </ion-item>
+                  </form>
+                </ion-content>
+              </ng-template>
+            </ion-modal>
+
+          </ion-item>
+        </ion-col>
+      </ion-row>
     </ion-col>
   </ion-row>
 
