--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,68 +1,86 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
+    <ion-title class="ion-text-center">
+      Funcionários
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
-  <ion-row class="ion-justify-content-center">
-    <ion-col size="9">
-        <form #searchForm="ngForm" (ngSubmit)="pesquisar(searchForm.value)">
-          <ion-item>
-            <ion-input label="Pesquisar" name="search" ngModel type="text"></ion-input>
-            <ion-checkbox justify="start">Nome</ion-checkbox>
-            <ion-checkbox justify="start">Cargo</ion-checkbox>
-            <ion-checkbox justify="start">Cidade</ion-checkbox>
-            <ion-checkbox justify="start">Telefone</ion-checkbox>
-            <ion-button type="submit">Pesquisar</ion-button>
-          </ion-item>
-        </form>
+  <ion-row class="ion-justify-content-center row">
+    <ion-col size-lg="9">
+      <form #searchForm="ngForm" (ngSubmit)="pesquisar(searchForm.value)">
+        <ion-row size-lg=9 class="ion-align-items-center ion-justify-content-around">
+          <ion-col size="12" size-lg="6">
+            <ion-searchbar color="light" class=pesquisa label=Pesquisar name="pesquisar" ngModel></ion-searchbar>
+          </ion-col>
+          <ion-col size="12" size-lg="4" class="ion-justify-content-center">
+            <ion-item class="check">
+              <ion-checkbox name="cargo" justify="start" ngModel=false>Cargo</ion-checkbox>
+              <ion-checkbox name="nome" justify="start" ngModel=false>Nome</ion-checkbox>
+              <ion-checkbox name="cidade" justify="start" ngModel=false>Cidade</ion-checkbox>
+              <ion-checkbox name="telefone" justify="start" ngModel=false>Telefone</ion-checkbox>
+            </ion-item>
+          </ion-col>
+          <ion-col size="12" size-lg="2">
+            <ion-item class="btn">
+              <ion-button type="submit" slot="end">Pesquisar</ion-button>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </form>
     </ion-col>
   </ion-row>
 
-  <ion-row class="ion-justify-content-center">
-    <ion-col size="9">
-      <ion-list>
-        <ng-container *ngFor="let funcionario of this.funcionarios">
+  <ion-row class="ion-justify-content-center row">
+    <ion-col size-lg="9" size-md="12">
+      <ion-list class="list">
+        <ng-container *ngIf="type == 'object'">
+          <ion-row size="12" size-lg="3">
+            <ion-col>
+              <ion-item *ngFor="let funcionario of funcionarios">
+                <ion-label class="ion-text-wrap">Nome: {{ funcionario.Nome }} - Cargo: {{ funcionario.Cargo }} - Cidade: {{ funcionario.Cidade }} - Telefone: {{ funcionario.Fone }}</ion-label>
+                <ion-button color="warning" (click)="selecionar(funcionario.CodFun); setOpen()">
+                  <ion-icon name="create-outline"></ion-icon>
+                </ion-button>
+                <ion-button color="danger" (click)="remover(funcionario.CodFun)">
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ng-container>
+        <ng-container *ngIf="type == 'string'">
           <ion-item>
-            <ion-label>Nome: {{ funcionario.Nome }} - Cargo: {{ funcionario.Cargo }} - Cidade: {{ funcionario.Cidade }} - Telefone: {{ funcionario.Fone }}</ion-label>
-            <ion-button color="warning" (click)="selecionar(funcionario.CodFun); setOpen(true)">
-              <ion-icon name="create-outline"></ion-icon>
-            </ion-button>
-            <ion-button color="danger" (click)="remover(funcionario.CodFun)">
-              <ion-icon name="trash-outline"></ion-icon>
-            </ion-button>
+            <p>{{funcionarios}}</p>
           </ion-item>
         </ng-container>
       </ion-list>
 
       <ion-row>
         <ion-col>
-          <ion-item>
-            <ion-button size="medium" color="success" (click)=setOpen(true)>Inserir</ion-button>
-            
+          <ion-item class="btn-modal" lines="none">
+            <ion-button size="medium" color="success" (click)=setOpen()>Inserir</ion-button>
+          </ion-item>
             <!-- INSERIR MODAL -->
             <ion-modal [isOpen]="isModalOpen">
               <ng-template>
                 <ion-header>
                   <ion-toolbar>
                     <ion-buttons slot="start">
-                      <ion-button (click)="setOpen(false)">Cancel</ion-button>
+                      <ion-button (click)="setOpen()">Cancel</ion-button>
                     </ion-buttons>
                     <ion-title>Inserir Funcionario</ion-title>
                     <ion-buttons slot="end">
-                      <ion-button type="submit" (click)="funcionario.id != '' ? atualizar(formFuncionario.value) : inserir(formFuncionario.value); setOpen(false);" [strong]="true">Confirm</ion-button>
+                      <ion-button type="submit" (click)="funcionario.id != '' ? atualizar(formFuncionario.value) : inserir(formFuncionario.value); setOpen();" [strong]="true">Confirm</ion-button>
                     </ion-buttons>
                   </ion-toolbar>
                 </ion-header>
                 <ion-content class="ion-padding">
+                  <ion-col class="ion-text-center">
+                    <h1>{{ funcionario.id ? 'Editar' : 'Inserir'}} Funcionario</h1>
+                  </ion-col>
                   <form #formFuncionario="ngForm"> <!-- variavel de template tipo um let -->
-                    <ion-item lines="none">
-                      <ion-label>{{ funcionario.id ? 'Editar' : 'Inserir'}} Funcionario</ion-label>
-                    </ion-item>
                     <ion-item *ngIf="funcionario.id">
                       <ion-input label="id" name="id" [(ngModel)]="funcionario.id" type="text"></ion-input>
                     </ion-item>
@@ -100,8 +118,6 @@
                 </ion-content>
               </ng-template>
             </ion-modal>
-
-          </ion-item>
         </ion-col>
       </ion-row>
     </ion-col>
