--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
       <form #searchForm="ngForm" (ngSubmit)="pesquisar(searchForm.value)">
         <ion-row size-lg=9 class="ion-align-items-center ion-justify-content-around">
           <ion-col size="12" size-lg="6">
-            <ion-searchbar color="light" class=pesquisa label=Pesquisar name="pesquisar" ngModel></ion-searchbar>
+            <ion-searchbar class=pesquisa label=Pesquisar name="pesquisar" ngModel></ion-searchbar>
           </ion-col>
           <ion-col size="12" size-lg="4" class="ion-justify-content-center">
             <ion-item class="check">
